--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "admindashboard",
+  "name": "ecommerce-admin",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,10 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "eslint": "8.41.0",
-    "eslint-config-next": "13.4.3",
-    "next": "13.4.3",
+    "@azure/storage-blob": "^12.14.0",
+    "@next-auth/mongodb-adapter": "^1.1.3",
+    "autoprefixer": "^10.4.13",
+    "axios": "^1.3.4",
+    "eslint": "8.35.0",
+    "eslint-config-next": "13.2.3",
+    "mime-types": "^2.1.35",
+    "mongodb": "^5.5.0",
+    "mongoose": "^7.0.0",
+    "multiparty": "^4.2.3",
+    "next": "13.2.3",
+    "next-auth": "^4.20.1",
+    "postcss": "^8.4.21",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-sortablejs": "^6.1.4",
+    "react-spinners": "^0.13.8",
+    "react-sweetalert2": "^0.5.2",
+    "sortablejs": "^1.15.0",
+    "typeorm": "^0.3.16"
   }
 }
