--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "@azure/storage-blob": "^12.14.0",
     "@next-auth/mongodb-adapter": "^1.1.3",
-    "autoprefixer": "^10.4.13",
-    "axios": "^1.3.4",
+    "axios": "^1.4.0",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "mime-types": "^2.1.35",
@@ -21,12 +20,17 @@
     "multiparty": "^4.2.3",
     "next": "13.2.3",
     "next-auth": "^4.20.1",
-    "postcss": "^8.4.21",
     "react": "18.2.0",
+    "react-confirm": "^0.3.0-2",
     "react-dom": "18.2.0",
     "react-sortablejs": "^6.1.4",
     "react-spinners": "^0.13.8",
     "sortablejs": "^1.15.0",
     "typeorm": "^0.3.16"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2"
   }
 }
