--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@azure/storage-blob": "^12.14.0",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "formik": "^2.4.1",
     "mime-types": "^2.1.35",
     "mongodb": "^5.5.0",
     "mongoose": "^7.0.0",
