--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next-auth/mongodb-adapter": "^1.1.3",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.37.1",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "formik": "^2.4.1",
@@ -31,7 +32,7 @@
     "react-spinners": "^0.13.8",
     "recharts": "^2.7.1",
     "sortablejs": "^1.15.0",
-    "sweetalert2": "^11.7.12",
+    "sweetalert2": "^11.4.8",
     "typeorm": "^0.3.16"
   },
   "devDependencies": {
