--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecommerce-admin",
+  "name": "delivery-app-admin-dashboard",
   "version": "0.1.0",
   "private": true,
   "scripts": {
